--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,27 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+//    def room_version = "2.5.2"
+
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:2.5.2"
+
+
+//    def lifecycle_version = "2.6.1"
+//    def arch_version = "2.2.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:2.6.1"
+
+
+    // Annotation processor
+//    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.6.1"
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.1"
 }
